[project]
name = "roskarl"
version = "3.0.0"
authors = [
  { name="Erik Bremstedt", email="erik.bremstedt@gmail.com" },
]
description = "Environment variable helpers"
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "croniter>0.3.0"
]

[project.urls]
Homepage = "https://github.com/ebremstedt/roskarl"
Issues = "https://github.com/ebremstedt/roskarl/issues"
